side-bar change

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -382,19 +382,6 @@
           ],
           "type": "sass"
         },
-        "580a93f8": {
-          "id": "580a93f8",
-          "path": "markup/images/logo.png",
-          "output": "markup/images/logo.png",
-          "name": "logo.png",
-          "category": "IMAGE",
-          "size": 28953,
-          "type": "png",
-          "initialSize": 28953,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "962d26f0": {
           "id": "962d26f0",
           "path": "markup/js/add-propertyFrom.js",
@@ -416,6 +403,35 @@
           "path": "markup/js/dashboard.js",
           "output": "markup/js/dashboard-dist.js",
           "name": "dashboard.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "8a1b395c": {
+          "id": "8a1b395c",
+          "path": "markup/images/user-img.png",
+          "output": "markup/images/user-img.png",
+          "name": "user-img.png",
+          "category": "IMAGE",
+          "size": 3127,
+          "type": "png",
+          "initialSize": 3127,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a5668874": {
+          "id": "a5668874",
+          "path": "markup/js/accordion-plugin.js",
+          "output": "markup/js/accordion-plugin-dist.js",
+          "name": "accordion-plugin.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
