--- a/prepros.cfg
+++ b/prepros.cfg
@@ -442,6 +442,17 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "74fe6bdd": {
+          "id": "74fe6bdd",
+          "path": "markup/includes/add-property-form.html",
+          "output": "markup/includes/add-property-form.html",
+          "name": "add-property-form.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
