--- a/prepros.cfg
+++ b/prepros.cfg
@@ -453,6 +453,19 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "2ca98ba4": {
+          "id": "2ca98ba4",
+          "path": "markup/images/user1.jpg",
+          "output": "markup/images/user1.jpg",
+          "name": "user1.jpg",
+          "category": "IMAGE",
+          "size": 19426,
+          "type": "jpg",
+          "initialSize": 19426,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
