--- a/prepros.cfg
+++ b/prepros.cfg
@@ -466,6 +466,22 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "86f0790d": {
+          "id": "86f0790d",
+          "path": "markup/js/placeholder.js",
+          "output": "markup/js/placeholder-dist.js",
+          "name": "placeholder.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
