--- a/prepros.cfg
+++ b/prepros.cfg
@@ -238,7 +238,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "5281ce78"
+            "5281ce78",
+            "9eaa8960",
+            "ae57428e"
           ],
           "type": "sass"
         },
@@ -258,7 +260,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "5281ce78"
+            "5281ce78",
+            "9eaa8960",
+            "ae57428e"
           ],
           "type": "sass"
         },
@@ -318,7 +322,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "5281ce78"
+            "5281ce78",
+            "9eaa8960",
+            "ae57428e"
           ],
           "type": "sass"
         },
@@ -358,7 +364,9 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "5281ce78"
+            "5281ce78",
+            "9eaa8960",
+            "ae57428e"
           ],
           "type": "sass"
         },
@@ -482,6 +490,85 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "0f2bb790": {
+          "id": "0f2bb790",
+          "path": "markup/includes/property-listing.html",
+          "output": "markup/includes/property-listing.html",
+          "name": "property-listing.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "9eaa8960": {
+          "id": "9eaa8960",
+          "path": "markup/scss/property-listing.scss",
+          "output": "markup/css/property-listing.css",
+          "name": "property-listing.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "d4cb0afe": {
+          "id": "d4cb0afe",
+          "path": "markup/css/property-listing.css",
+          "output": "markup/css/property-listing-dist.css",
+          "name": "property-listing.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "ae57428e": {
+          "id": "ae57428e",
+          "path": "markup/scss/add-property-form.scss",
+          "output": "markup/css/add-property-form.css",
+          "name": "add-property-form.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "44224eb5": {
+          "id": "44224eb5",
+          "path": "markup/css/add-property-form.css",
+          "output": "markup/css/add-property-form-dist.css",
+          "name": "add-property-form.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         }
       },
       "deploymentHistory": {},
