--- a/prepros.cfg
+++ b/prepros.cfg
@@ -569,6 +569,17 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "f385d719": {
+          "id": "f385d719",
+          "path": "markup/includes/add-agency-user.html",
+          "output": "markup/includes/add-agency-user.html",
+          "name": "add-agency-user.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
