--- a/prepros.cfg
+++ b/prepros.cfg
@@ -610,6 +610,17 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "56d9c206": {
+          "id": "56d9c206",
+          "path": "markup/includes/change-password.html",
+          "output": "markup/includes/change-password.html",
+          "name": "change-password.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
