--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,26 @@
       "name": "pdashboard",
       "path": "",
       "files": {
+        "57581412": {
+          "id": "57581412",
+          "path": "markup/scss/_fancybox.scss",
+          "output": "markup/css/_fancybox.css",
+          "name": "_fancybox.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "5281ce78"
+          ],
+          "type": "sass"
+        },
         "6c22f42f": {
           "id": "6c22f42f",
           "path": "markup/dashboard.html",
@@ -621,6 +641,61 @@
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "c8c387b0": {
+          "id": "c8c387b0",
+          "path": "markup/js/lightBox.js",
+          "output": "markup/js/lightBox-dist.js",
+          "name": "lightBox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a6168a3f": {
+          "id": "a6168a3f",
+          "path": "markup/images/fancybox/fancybox_overlay.png",
+          "output": "markup/images/fancybox/fancybox_overlay.png",
+          "name": "fancybox_overlay.png",
+          "category": "IMAGE",
+          "size": 1003,
+          "type": "png",
+          "initialSize": 1003,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "91f9e9d1": {
+          "id": "91f9e9d1",
+          "path": "markup/images/fancybox/fancybox_sprite.png",
+          "output": "markup/images/fancybox/fancybox_sprite.png",
+          "name": "fancybox_sprite.png",
+          "category": "IMAGE",
+          "size": 1362,
+          "type": "png",
+          "initialSize": 1362,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "558af824": {
+          "id": "558af824",
+          "path": "markup/images/fancybox/fancybox_sprite@2x.png",
+          "output": "markup/images/fancybox/fancybox_sprite@2x.png",
+          "name": "fancybox_sprite@2x.png",
+          "category": "IMAGE",
+          "size": 6553,
+          "type": "png",
+          "initialSize": 6553,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
