--- a/prepros.cfg
+++ b/prepros.cfg
@@ -696,6 +696,17 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "7c9401e6": {
+          "id": "7c9401e6",
+          "path": "markup/includes/fav-property-list.html",
+          "output": "markup/includes/fav-property-list.html",
+          "name": "fav-property-list.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
